--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.6.3"
   },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
