--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-howler": "^5.2.0",
     "react-icons": "^4.3.1",
     "reset-css": "^5.0.1",
+    "superjson": "^1.8.1",
     "swr": "^1.1.1"
   },
   "devDependencies": {
@@ -38,7 +39,7 @@
     "@types/react-howler": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "babel-plugin-superjson-next": "^0.4.3",
+    "babel-plugin-superjson-next": "^0.4.2",
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-next": "12.0.7",
