--- a/package.json
+++ b/package.json
@@ -3,57 +3,60 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "next dev -p 3002",
+    "build": "next build -p 3002",
+    "start": "next start -p 3002",
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/layout": "^1.5.1",
-    "@chakra-ui/react": "^1.7.2",
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/layout": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
     "@dh-react-hooks/use-raf": "^0.9.1",
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
-    "@prisma/client": "^3.12.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/lato": "^4.5.8",
+    "@prisma/client": "^4.0.0",
     "bcrypt": "^5.0.1",
-    "cookie": "^0.4.1",
+    "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "easy-peasy": "^5.0.4",
-    "format-duration": "^1.4.0",
-    "framer-motion": "^4.1.17",
+    "format-duration": "^2.0.0",
+    "framer-motion": "^6.3.16",
     "infer-next-props-type": "^0.0.4",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12.2.0",
+    "prop-types": "^15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-howler": "^5.2.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "reset-css": "^5.0.1",
-    "superjson": "^1.8.1",
-    "swr": "^1.1.1"
+    "superjson": "^1.9.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/cookie": "^0.4.1",
+    "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/react": "^17.0.37",
+    "@types/react": "^18.0.14",
     "@types/react-howler": "^5.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "babel-plugin-superjson-next": "^0.4.2",
-    "eslint": "^8.4.1",
-    "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-next": "12.0.7",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.4.1",
-    "prisma": "^3.6.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.6.3"
+    "@typescript-eslint/eslint-plugin": "^5.30.4",
+    "@typescript-eslint/parser": "^5.30.4",
+    "babel-plugin-superjson-next": "^0.4.3",
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^12.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
+    "prisma": "^4.0.0",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "resolutions": {
     "@types/react": "17.0.2",
