--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cookies": "^0.8.0",
     "easy-peasy": "^5.0.4",
     "format-duration": "^2.0.0",
-    "framer-motion": "^6.3.16",
+    "framer-motion": "^6.4.1",
     "infer-next-props-type": "^0.0.4",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
@@ -41,8 +41,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^18.0.14",
     "@types/react-howler": "^5.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.4",
-    "@typescript-eslint/parser": "^5.30.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "babel-plugin-superjson-next": "^0.4.3",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -59,8 +59,8 @@
     "typescript": "^4.7.4"
   },
   "resolutions": {
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2"
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.6"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
