--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "cookies": "^0.8.0",
     "easy-peasy": "^5.0.4",
     "format-duration": "^2.0.0",
-    "framer-motion": "^6.4.1",
+    "framer-motion": "^6.4.3",
     "infer-next-props-type": "^0.0.4",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.2.0",
+    "lodash.debounce": "^4.0.8",
+    "next": "12.2.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,14 +40,15 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/react": "^18.0.14",
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/react": "^18.0.15",
     "@types/react-howler": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "babel-plugin-superjson-next": "^0.4.3",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "^12.2.0",
+    "eslint-config-next": "^12.2.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
@@ -59,7 +61,7 @@
     "typescript": "^4.7.4"
   },
   "resolutions": {
-    "@types/react": "^18.0.14",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6"
   },
   "prisma": {
